fix overflow x on mobile phone

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -7,6 +7,10 @@
 }
 
 // general
+html {
+  overflow-x: hidden;
+}
+
 body {
   background-image: linear-gradient(
       to top,
